--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "malcomponents",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "dev": "parcel serve dev/public/index.html",
-    "build": "parcel build src/index.js",
-    "publish": "npm publish"
+    "build": "parcel build src/index.js"
   },
   "repository": {
     "type": "git",
