--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "parcel serve dev/public/index.html",
-    "build": "parcel build src/index.js"
+    "dev": "start-storybook",
+    "build": "parcel build src/index.js",
+    "build-storybook": "build-storybook",
+    "deploy-storybook": "build-storybook && mv storybook-static/index.html storybook-static/200.html && surge storybook-static malcomponents.surge.sh"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,12 @@
   },
   "homepage": "https://github.com/malcodeman/malcomponents#readme",
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@storybook/addon-actions": "^5.3.18",
+    "@storybook/addon-links": "^5.3.18",
+    "@storybook/addons": "^5.3.18",
+    "@storybook/react": "^5.3.18",
+    "babel-loader": "^8.1.0",
     "parcel": "^2.0.0-alpha.3.2"
   },
   "dependencies": {
