--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-links": "^5.3.18",
+    "@storybook/addon-storysource": "^5.3.19",
     "@storybook/addons": "^5.3.18",
     "@storybook/react": "^5.3.18",
     "babel-loader": "^8.1.0",
