--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "parcel": "^2.0.0-beta.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.3"
   },
