--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "malcomponents",
-  "version": "2.0.18",
+  "version": "2.0.21",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -29,6 +29,7 @@
     "@storybook/addon-storysource": "^6.1.14",
     "@storybook/addons": "^6.1.14",
     "@storybook/react": "^6.1.14",
+    "@types/react-dom": "^17.0.1",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
@@ -39,12 +40,14 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
+    "react-use": "^17.1.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-use": "^17.1.1",
     "styled-components": "^5.2.1"
   }
 }
