--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "malcomponents",
-  "version": "2.0.29",
+  "version": "2.0.30",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -23,6 +23,8 @@
   "homepage": "https://github.com/malcodeman/malcomponents#readme",
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@parcel/packager-ts": "2.0.0-beta.2",
+    "@parcel/transformer-typescript-types": "2.0.0-beta.2",
     "@storybook/addon-actions": "^6.1.14",
     "@storybook/addon-knobs": "^6.1.14",
     "@storybook/addon-links": "^6.1.14",
@@ -36,18 +38,18 @@
     "babel-loader": "^8.2.2",
     "eslint": "^7.19.0",
     "eslint-plugin-react": "^7.22.0",
-    "parcel": "^2.0.0-beta.1",
+    "parcel": "^2.0.0-beta.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
-    "react-use": "^17.1.1",
-    "styled-components": "^5.2.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "react-use": "^17.1.1",
+    "styled-components": "^5.2.1"
   },
   "peerDependencies": {
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-use": "^17.1.1",
-    "styled-components": "^5.2.1"
+    "react-dom": "^17.0.1"
   }
 }
